Minor cosmetic changes and version update